--- a/tmux.conf
+++ b/tmux.conf
@@ -71,12 +71,19 @@ bind -n C-S-Right resize-pane -R
 bind -n C-S-Up resize-pane -U
 bind -n C-S-Down resize-pane -D
 
+# CAUTION: This doesn't seem to currently work.  TODO fix:
+# More sane bindings for copy mode: v starts selection
+# (like in vim), and y 'yanks' selection, aka putting it
+# on the clipboard (both in tmux and on computer)
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-selection
+
 # Prefix + s swaps the current pane with the 'marked' pane
 # (Prefix + m 'marks' a pane)
 bind-key s swap-pane
 
 # Put tmux into vi mode.  This makes copy mode use vim-like
-# ket bindings.
+# key bindings instead of emacs-like bindings.
 set-window-option -g mode-keys vi
 
 # Put the status bar at the top of the window instead of the\
