[tmux] Pass through DISPLAY environment variable to tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -78,6 +78,10 @@ bind -n C-S-Down resize-pane -D
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-selection
 
+# Update DISPLAY env variable so that programs that launch
+# in X will work (i.e. meld)
+set-option -g update-environment "DISPLAY"
+
 # Prefix + s swaps the current pane with the 'marked' pane
 # (Prefix + m 'marks' a pane)
 bind-key s swap-pane
