[tmux] Make Prefix + " activate interactive window selection, like screen

--- a/tmux.conf
+++ b/tmux.conf
@@ -50,6 +50,10 @@ bind - split-window -v
 unbind '"'
 unbind %
 
+# Bind Prefix + " to interactive window selection, similar
+# to how it works in screen
+bind '"' choose-tree -w
+
 # Bind Prefix + r to reload the tmux config on the fly
 bind r source-file ~/.tmux.conf
 
