--- a/tmux.conf
+++ b/tmux.conf
@@ -90,6 +90,10 @@ set-option -g update-environment "DISPLAY"
 # (Prefix + m 'marks' a pane)
 bind-key s swap-pane
 
+# Prefix + k kills window with confirmation (just like
+# Prefix + &)
+bind k confirm-before -p "kill-window #W? (y/n)" kill-window
+
 # Put tmux into vi mode.  This makes copy mode use vim-like
 # key bindings instead of emacs-like bindings.
 set-window-option -g mode-keys vi
