[zshrc] Add all the stuff from my work computer, minus anything work-specific

--- a/tmux.conf
+++ b/tmux.conf
@@ -116,6 +116,11 @@ set-window-option pane-active-border-style 'fg=colour234, bg=colour234'
 # new window use the most up-to-date version of the config.
 set-hook after-new-window 'source ~/.tmux.conf'
 
+# Prompt for a window name every time a new window is created,
+# because manual window names are far more descriptive than the
+# automatic ones.
+set-hook after-new-window "command-prompt -p \"Window name: \" \"rename-window '%%'\""
+
 # Initialize TMUX plugin manager
 # This line should be kept at the end of the file.
 run '~/.tmux/plugins/tpm/tpm'
