Add Prefix+/ as a key binding to search backwards in pane

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -151,7 +151,7 @@ set-option -g renumber-windows on
 # -a makes the new window open just after the current window.
 bind c new-window -a
 
-
+bind / copy-mode \; send ?
 
 # Initialize TMUX plugin manager
 # This line should be kept at the end of the file.
