Increase tmux history to 1M lines. This does not seem to work correctly currently.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -153,6 +153,8 @@ bind c new-window -a
 
 bind / copy-mode \; send ?
 
+set -g history-limit 1000000
+
 # Initialize TMUX plugin manager
 # This line should be kept at the end of the file.
 # run '~/.tmux/plugins/tpm/tpm'
